# Win

./: README.md  package-lock.json  package.json  vite.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/Code/: +Code.svelte  languages.ts  styles.ts  themes.ts
src/lib/Explorer/: +Explorer.svelte  +FileItem.svelte
src/lib/Palette/: Palette.svelte  palette.ts
src/lib/TabList/: +Tab.svelte  +Tablist.svelte
src/routes/: +layout.svelte  +page.svelte  globals.css
src/services/: icons.ts  services.ts
